--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "techNotes MERN Project",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server",
+    "start": "node server",
     "dev": "nodemon server",
     "seed": "nodemon seeds"
   },
